<resources>
    <string name="app_name">Sell</string>
    <string name="text">账号登录</string>
    <string name="rig">申请入驻</string>
    <string name="Rpwd">忘记密码</string>
    <string name="login">登录</string>

    <string name="sy">待处理</string>
    <string name="rw">任务</string>
    <string name="sp">商品</string>
    <string name="mt">我的</string>
    <string name="myrw">我的任务</string>
    <string name="spgw">商品管理</string>
</resources>
