<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ShowActivity"
    android:background="#fff">
    <FrameLayout
        android:id="@+id/show_FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="9.3"
        android:background="#ffff"></FrameLayout>
    <RadioGroup
        android:id="@+id/show_RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:orientation="horizontal"
        android:layout_weight="0.7"
        android:gravity="center"
        android:background="#fff"
        >
        <RadioButton
            android:id="@+id/show_homepage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:paddingTop="@dimen/dp_7"
            android:text="@string/sy"
            />

        <RadioButton
            android:id="@+id/show_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/rw"
            android:gravity="center"
            android:paddingTop="@dimen/dp_7"
            />
        <RadioButton
            android:id="@+id/show_commodity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/sp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_7"
            />
        <RadioButton
            android:id="@+id/show_my"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/mt"
            android:gravity="center"
            android:paddingTop="@dimen/dp_7"
            />
    </RadioGroup>

</LinearLayout>