<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="#FFF3F3F3">

    <RelativeLayout
        android:id="@+id/loging_tou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_35"
        android:background="#fff"
        android:paddingBottom="@dimen/dp_14"
        >
        <TextView
            android:id="@+id/my_login_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="@dimen/dp_18"
            android:text="@string/text"
            />
    </RelativeLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loging_RadioGroup"
        android:layout_below="@+id/loging_tou"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_1"
        android:background="#fff">
        <CheckBox
            android:id="@+id/language_zg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="中文"
            android:textSize="@dimen/dp_14"
            android:textColor="#999"
            android:padding="@dimen/dp_13"
            android:background="@drawable/selector_mainactivity_check"
            />
        <CheckBox
            android:id="@+id/language_jpz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="柬埔寨"
            android:textSize="@dimen/dp_14"
            android:padding="@dimen/dp_13"
            android:textColor="#999"
            android:background="@drawable/selector_mainactivity_check"
            />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/loging_RadioGroup"
        android:layout_marginTop="1dp"
        android:background="#fff">

        <LinearLayout
            android:id="@+id/loging_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_80"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/main_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:maxLength="11"
                android:inputType="phone"
                android:hint="请输入手机号"
                android:textColor="#FFCCCCCC" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/my_login_RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loging_top"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_20">

            <EditText
                android:id="@+id/main_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFCCCCCC"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:maxLength="16"
                android:hint="请输入密码"/>
        </LinearLayout>

        <Button
            android:id="@+id/loging_login"
            android:layout_width="@dimen/dp_250"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@+id/my_login_RelativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp_80"
            android:background="@drawable/shape_mainactivity_button"
            android:text="@string/login"
            android:textColor="#fff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_20">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    android:text="@string/rig"
                    android:textColor="#FF333333"
                    android:textSize="@dimen/dp_14" />

                <TextView
                    android:layout_width="@dimen/dp_2"
                    android:layout_height="wrap_content"
                    android:background="#FFF3F3F3"
                    android:text=" " />

                <TextView
                    android:id="@+id/main_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    android:text="@string/Rpwd"
                    android:textColor="#FF333333"
                    android:textSize="@dimen/dp_14" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>